attempt to fix scrollbar gutter

--- a/packages/app-extension/src/index.css
+++ b/packages/app-extension/src/index.css
@@ -27,5 +27,4 @@ input[type="number"] {
 
 #root {
   overflow: hidden;
-  min-width: 375px;
 }
